Se añaden nuevos valores a los json que manejan los idiomas, se cambia el uso del guin en la creacion de la tab a un guion simple "-", se extiende el maximo de caracteres permitidos a 90

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -6,5 +6,9 @@
   "homePage": {
     "createAccount": "Create Account",
     "tryNow": "Try Now"
+  },
+  "createTab": {
+    "clearTab": "Clear Tab",
+    "createTab": "Create Tab"
   }
 }
