--- a/src/i18n/es/translation.json
+++ b/src/i18n/es/translation.json
@@ -6,5 +6,9 @@
   "homePage": {
     "createAccount": "Crear Cuenta",
     "tryNow": "Pruebalo Ahora"
+  },
+  "createTab": {
+    "clearTab": "Limpiar Tab",
+    "createTab": "Crear Tab"
   }
 }
